# trab-final-ros2

./: .gitignore  Makefile  README.md  Robot status.md  doc.typ  projeto1-actions.canvas  ps4.yaml
src/cpp_pkg/: CMakeLists.txt  package.xml
src/cpp_pkg/src/: battery.cpp  move_robot_client.cpp  pub.cpp  sensor_node.cpp  sub.cpp
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml
src/my_robot_bringup/worlds/: test_world.sdf
src/my_robot_description/launch/: display.launch.xml
src/my_robot_description/urdf/: arm.xacro  common_properties.xacro  mobile_base.xacro  my_robot.urdf.xacro  standalone_arm.urdf.xacro
src/my_robot_plot_topic/: package.xml  setup.cfg  setup.py
src/my_robot_plot_topic/my_robot_plot_topic/: plot_cmd_vel.py
src/proj1_bringup/: CMakeLists.txt  package.xml
src/proj1_bringup/config/: number_params.yaml
src/proj1_bringup/launch/: number_app.launch.py  number_app.launch.xml
src/proj1_interface/: CMakeLists.txt  package.xml
src/proj1_interface/action/: RobotStatus.action
src/proj1_interface/msg/: DataInt.msg  StatePanel.msg
src/proj1_interface/srv/: SetLed.srv
src/py_pkg/: package.xml  setup.py
src/py_pkg/py_pkg/: ekf.py  led_panel.py  move_robot.py  publisher.py  robot.py  test.py
src/sensor_manager/: package.xml  setup.cfg  setup.py
src/sensor_manager/sensor_manager/: read_sensor.py
